Make plugins work on BeOS Thanks to Makoto Hamanaka <VYA04230@nifty.com> for the patch Bug #68907 r=av